# SlimVK

./: CMakeLists.txt  LICENSE  README.md  post-build.bat
assets/shaders/: shader.vert
src/: slim.h
src/examples/: 01_Lights.cpp  cube.mesh  floor_albedo.raw_image  floor_normal.raw_image  fragment_shader.glsl  images.h  monkey.mesh  shaders.h  vertex_shader.glsl
src/slim/: app.h
src/slim/core/: base.h  logging.h
src/slim/draw/: selection.h
src/slim/math/: mat4_constructurs.h
src/slim/scene/: light.h  material.h  mesh.h  selection.h
src/slim/viewport/: frustum.h  projection.h  viewport.h
src/slim/vulkan/: gpu.h
src/slim/vulkan/core/: base.h  buffer.h  command.h  compute.h  debug.h  descriptor.h  device.h  fence.h  framebuffer.h  gpu.h  graphics.h  image.h  instance.h  pipeline.h  present.h  render_pass.h  render_target.h  shader.h  shader_compiler.cpp  shadow.h  swapchain.h  transfer.h
src/slim/vulkan/raster/: base.h  debug_fragment_shader.glsl  default_fragment_shader.glsl  default_material.h  default_vertex_shader.glsl  line_render.h  pipeline.h  skybox.h
src/slim/vulkan/scene/: mesh.h
